--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
 </head>
 <body>
   <main class="container fade-in">
-    <h1>Your Studio Name</h1>
+    <h1>Mazeweaver</h1>
     <p>We make strange, playful, and thoughtful games.</p>
 
     <div class="links">
-      <a href="#">Steam</a>
-      <a href="#">Itch.io</a>
-      <a href="#">Twitter</a>
-      <a href="#">Tiktok</a>
-      <a href="#">Reddit</a>
-      <a href="#">Discord</a>
+      <a href="https://x.com/mazeweavergames">X</a>
+      <a href="https://www.tiktok.com/@mazeweavergames">Tiktok</a>
     </div>
   </main>
 </body>
