--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <main class="container fade-in">
     <h1>Mazeweaver</h1>
-    <p>We make strange, playful, and thoughtful games.</p>
+    <p>Let's make fun and games!</p>
 
     <div class="links">
       <a href="https://x.com/mazeweavergames">X</a>
