--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <main class="container fade-in">
-    <h1>Mazeweaver</h1>
+    <h1>MAZEWEAVER</h1>
     <p>Let's make fun and games!</p>
 
     <div class="links">
       <a href="https://x.com/mazeweavergames">X</a>
-      <a href="https://www.tiktok.com/@mazeweavergames">Tiktok</a>
+      <a href="https://www.tiktok.com/@mazeweavergames">TikTok</a>
     </div>
   </main>
 </body>
