--- a/index.html
+++ b/index.html
@@ -1,20 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Mazeweaver</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <main class="container fade-in">
-    <h1>MAZEWEAVER</h1>
-    <p>Let's make fun and games!</p>
+  <meta charset="UTF-8" />
 
-    <div class="links">
-      <a href="https://x.com/mazeweavergames">X</a>
-      <a href="https://www.tiktok.com/@mazeweavergames">TikTok</a>
-    </div>
+  <!-- Primary SEO -->
+  <title>MINDRAZER – Game by Mazeweaver</title>
+  <meta name="description" content="MINDRAZER is an indie game created by Mazeweaver. An isometric action-adventure with light strategy." />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Mobile -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Open Graph (social previews) -->
+  <meta property="og:title" content="MINDRAZER" />
+  <meta property="og:description" content="An indie game by Mazeweaver." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://mazeweaver.com" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <main class="container">
+
+    <!-- GAME FIRST -->
+    <h1 class="game-title">MINDRAZER</h1>
+
+    <p class="byline">
+      An indie game by <span class="studio-name">Mazeweaver</span>
+    </p>
+
+    <p class="tagline">
+      An isometric action-adventure with light strategy.
+    </p>
+
+    <!-- LINKS -->
+    <nav class="links">
+      <a href="https://x.com/mazeweavergames" target="_blank">X</a>
+      <a href="https://www.tiktok.com/@mazeweavergames" target="_blank">TikTok</a>
+    </nav>
+
+    <!-- FOOTER -->
+    <footer>
+      <p>© 2026 Mazeweaver</p>
+    </footer>
+
   </main>
 </body>
 </html>
