--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.png" sizes="48x48" type="image/png">
+  <link rel="icon" href="/favicon.png" type="image/png">
 
   <!-- Primary SEO -->
   <title>MINDRAZER – Game by Mazeweaver</title>
