--- a/index.html
+++ b/index.html
@@ -25,29 +25,27 @@
 
 <body>
   <main class="container">
-
-    <!-- GAME FIRST -->
+    <!-- Game Title -->
     <h1 class="game-title">MINDRAZER</h1>
 
-    <p class="byline">
-      An indie game by <span class="studio-name">Mazeweaver</span>
-    </p>
-
-    <p class="tagline">
+    <!-- Hidden description (kept for SEO / future use) -->
+    <p class="game-description hidden">
       An isometric action-adventure with light strategy.
     </p>
 
-    <!-- LINKS -->
-    <nav class="links">
-      <a href="https://x.com/mazeweavergames" target="_blank">X</a>
-      <a href="https://www.tiktok.com/@mazeweavergames" target="_blank">TikTok</a>
-    </nav>
-
-    <!-- FOOTER -->
-    <footer>
-      <p>© 2026 Mazeweaver</p>
-    </footer>
-
+    <!-- Social icons -->
+    <div class="socials">
+      <a href="https://x.com/mazeweavergames" aria-label="Twitter" target="_blank">
+        <img src="/icons/twitter.svg" alt="Twitter">
+      </a>
+      <a href="https://www.tiktok.com/@mazeweavergames" aria-label="TikTok" target="_blank">
+        <img src="/icons/tiktok.svg" alt="TikTok">
+      </a>
+    </div>
   </main>
+
+  <!-- Studio name -->
+  <footer class="studio-name">
+    Mazeweaver
+  </footer>
 </body>
-</html>
