--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <!-- Social icons -->
     <div class="socials">
-      <a href="https://x.com/mazeweavergames" aria-label="Twitter" target="_blank">
-        <img src="/icons/twitter.svg" alt="Twitter">
+      <a href="https://x.com/mazeweavergames" aria-label="X" target="_blank">
+        <img src="/icons/x.svg" alt="X">
       </a>
       <a href="https://www.tiktok.com/@mazeweavergames" aria-label="TikTok" target="_blank">
         <img src="/icons/tiktok.svg" alt="TikTok">
