--- a/index.html
+++ b/index.html
@@ -24,28 +24,23 @@
 </head>
 
 <body>
+  <!-- Social links -->
+  <nav class="social-rail">
+    <a href="https://x.com/yourgame" target="_blank" aria-label="X">
+      <img src="icons/x.svg" alt="X">
+    </a>
+    <a href="https://www.tiktok.com/@yourgame" target="_blank" aria-label="TikTok">
+      <img src="icons/tiktok.svg" alt="TikTok">
+    </a>
+  </nav>
+
+  <!-- Main content -->
   <main class="container">
-    <!-- Game Title -->
     <h1 class="game-title">MINDRAZER</h1>
-
-    <!-- Hidden description (kept for SEO / future use) -->
-    <p class="game-description hidden">
-      An isometric action-adventure with light strategy.
-    </p>
-
-    <!-- Social icons -->
-    <div class="socials">
-      <a href="https://x.com/mazeweavergames" aria-label="X" target="_blank">
-        <img src="/icons/x.svg" alt="X">
-      </a>
-      <a href="https://www.tiktok.com/@mazeweavergames" aria-label="TikTok" target="_blank">
-        <img src="/icons/tiktok.svg" alt="TikTok">
-      </a>
-    </div>
   </main>
 
   <!-- Studio name -->
   <footer class="studio-name">
-    Mazeweaver
+    MAZEWEAVER
   </footer>
 </body>
