--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 <body>
   <!-- Social links -->
   <nav class="social-rail">
-    <a href="https://x.com/yourgame" target="_blank" aria-label="X">
+    <a href="https://x.com/mazeweavergames" target="_blank" aria-label="X">
       <img src="icons/x.svg" alt="X">
     </a>
-    <a href="https://www.tiktok.com/@yourgame" target="_blank" aria-label="TikTok">
+    <a href="https://www.tiktok.com/@mazeweavergames" target="_blank" aria-label="TikTok">
       <img src="icons/tiktok.svg" alt="TikTok">
     </a>
   </nav>
