--- a/index.html
+++ b/index.html
@@ -24,23 +24,19 @@
 </head>
 
 <body>
-  <!-- Social links -->
-  <nav class="social-rail">
-    <a href="https://x.com/mazeweavergames" target="_blank" aria-label="X">
+  <!-- Social icons -->
+  <div class="socials">
+    <a href="#" aria-label="X">
       <img src="icons/x.svg" alt="X">
     </a>
-    <a href="https://www.tiktok.com/@mazeweavergames" target="_blank" aria-label="TikTok">
+    <a href="#" aria-label="TikTok">
       <img src="icons/tiktok.svg" alt="TikTok">
     </a>
-  </nav>
+  </div>
 
-  <!-- Main content -->
-  <main class="container">
-    <h1 class="game-title">MINDRAZER</h1>
-  </main>
+  <!-- Main title -->
+  <h1 class="game-title">MINDRAZER</h1>
 
   <!-- Studio name -->
-  <footer class="studio-name">
-    MAZEWEAVER
-  </footer>
+  <div class="studio-name">Mazeweaver</div>
 </body>
