--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 <body>
   <!-- Social icons -->
   <div class="socials">
-    <a href="#" aria-label="X">
+    <a href="https://x.com/mazeweavergames" aria-label="X">
       <img src="icons/x.svg" alt="X">
     </a>
-    <a href="#" aria-label="TikTok">
+    <a href="https://www.tiktok.com/@mazeweavergames" aria-label="TikTok">
       <img src="icons/tiktok.svg" alt="TikTok">
     </a>
   </div>
