--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="48x48">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="icon" href="/favicon.png" sizes="48x48" type="image/png">
-  <link rel="icon" href="/favicon.png" type="image/png">
 
   <!-- Primary SEO -->
   <title>MINDRAZER – Game by Mazeweaver</title>
