--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 </head>
 
 <body>
+  <video class="bg-video" autoplay muted loop playsinline>
+    <source src="/video/gameplay.mp4" type="video/mp4">
+  </video>
+
   <!-- Social icons -->
   <div class="socials">
     <a href="https://x.com/mazeweavergames" aria-label="X">
