--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 
   <!-- Main title -->
-  <h1 class="game-title">MINDRAZER</h1>
+  <img src="game-title.png" alt="MINDRAZER" class="game-title">
 
   <!-- Studio name -->
   <div class="studio-name">Mazeweaver</div>
