--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   </div>
 
   <!-- Main title -->
+  <h1 class="seo-hidden">MINDRAZER</h1>
   <img src="game-title.png" alt="MINDRAZER" class="game-title">
 
   <!-- Studio name -->
